o que faltou pro pdf

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Recebedor de arquivos</title>
 </head>
 <body>
-    <form action="viagem" method="post">
+    <link rel="stylesheet" href="styles.css">
+    <form action="viagem" method="post" class="form">
         <p>Motorista:</p>
         <input type="text" name="mot">
         <p>Paciente:</p>
